# cherrysoda-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CherrySodaEnv.bat  CherrySodaEnv.help  CherrySodaEnv.sh  Doxyfile.in  LICENSE  Licence-MonocleEngine.txt  README.md  TODO.txt  cherry-soda.sublime-project  cherry-soda.sublime-workspace  cherrysoda.sublime-project
.github/workflows/: cmake.yml  emscripten-windows.yml  emscripten.yml  linux.yml  macos.yml  windows-vs2017.yml  windows.yml
Bench/: CMakeLists.txt
Bench/MathBench/: CMakeLists.txt
Bench/SpriteBench/: CMakeLists.txt  run.py
Engine/: CMakeLists.txt  License-CherrySoda.txt
Engine/CherrySoda/: CherrySoda.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Main.h  Profile.h  Scene.cpp  Scene.h
Engine/CherrySoda/Audio/: Audio.cpp  Audio.h
Engine/CherrySoda/Colliders/: Circle.cpp  Circle.h  Collide.cpp  Collide.h  Collider.cpp  Collider.h  ColliderList.cpp  ColliderList.h  Grid.cpp  Grid.h  Hitbox.cpp  Hitbox.h
Engine/CherrySoda/Components/: CollidableComponent.cpp  CollidableComponent.h  Component.cpp  Component.h
Engine/CherrySoda/Components/Graphics/: GraphicsComponent.cpp  GraphicsComponent.h  Image.h  MeshGraphicsComponent.h  ParticleEmitter.cpp  ParticleEmitter.h  PixelText.cpp  PixelText.h  Sprite.cpp  Sprite.h  SpriteSheet.h  TileGrid.cpp  TileGrid.h
Engine/CherrySoda/Components/Logic/: Alarm.cpp  Alarm.h  CounterSet.h  Shaker.cpp  Shaker.h  StateMachine.cpp  StateMachine.h  Tween.cpp  Tween.h  Wiggler.cpp  Wiggler.h
Engine/CherrySoda/Graphic/: Graphic.cpp  Graphic.h
Engine/CherrySoda/Graphics/: Atlas.cpp  Atlas.h  Effect.h  Graphics.cpp  Graphics.h  MTexture.cpp  MTexture.h  Mesh.h  RenderTarget.cpp  RenderTarget.h  SpriteBank.cpp  SpriteBank.h  SpriteBatch.cpp  SpriteBatch.h  SpriteData.cpp  SpriteData.h  SpriteEffects.h  Texture.cpp  Texture.h  TileSet.h  embedded_shaders.h
Engine/CherrySoda/Graphics/embedded_shaders/: fs_basic.bin.h  fs_basic.dx.bin.h  fs_model.bin.h  fs_model.dx.bin.h  fs_sprite.bin.h  fs_sprite.dx.bin.h  vs_basic.bin.h  vs_basic.dx.bin.h  vs_model.bin.h  vs_model.dx.bin.h  vs_sprite.bin.h  vs_sprite.dx.bin.h
Engine/CherrySoda/Graphics/shaders/: cherrysoda_uniforms.sh  fs_model.sc  fs_sprite.sc  varying.def.sc  vs_model.sc  vs_sprite.sc
Engine/CherrySoda/Input/: MInput.cpp  MInput.h
Engine/CherrySoda/Interface/: Window.cpp  Window.h
Engine/CherrySoda/InternalUtilities/: ComponentList.cpp  ComponentList.h  EntityList.cpp  EntityList.h  RendererList.cpp  RendererList.h  TagLists.cpp  TagLists.h
Engine/CherrySoda/Particles/: Particle.cpp  Particle.h  ParticleSystem.h  ParticleType.cpp  ParticleType.h
Engine/CherrySoda/Renderers/: EverythingRenderer.cpp  EverythingRenderer.h  Renderer.h  RendererBase.cpp  RendererBase.h  SingleTagRenderer.cpp  SingleTagRenderer.h  TagExcludeRenderer.cpp  TagExcludeRenderer.h
Engine/CherrySoda/Util/: BitTag.cpp  BitTag.h  Calc.cpp  Calc.h  Camera.cpp  Camera.h  ChoiceSet.h  Chooser.h  Color.cpp  Color.h  Commands.cpp  Commands.h  Draw.cpp  Draw.h  Ease.cpp  Ease.h  GUI.cpp  GUI.h  Json.cpp  Json.h  Literals.h  Log.cpp  Log.h  Math.cpp  Math.h  Model.cpp  Model.h  NumType.h  PixelFont.cpp  PixelFont.h  Pool.h  Profile.cpp  Profile.h  STL.h  String.cpp  String.h  Time.cpp  Time.h  VirtualMap.h  XML.cpp  (+1 more)
Engine/CherrySoda/Utility/: Color.cpp  Color.h  Log.cpp  Log.h  NumType.h  NumTypes.h  String.cpp  String.h
Examples/: CMakeLists.txt
Examples/EaseFunction/: CMakeLists.txt
Examples/FirstFont/: CMakeLists.txt
Examples/FirstModel/: CMakeLists.txt  cherrysoda.py
Examples/FirstParticle/: CMakeLists.txt
Examples/FirstSprite/: CMakeLists.txt
Examples/FirstTriangle/: CMakeLists.txt  index.html
Examples/FirstTriangle/shaders/: varying.def.sc
Examples/FirstTriangle/src/: FirstTriangle.cpp  FirstTriangle.h  Program.cpp  Program.h
Examples/LD42_BulletJam/: CMakeLists.txt  pack_atlas.bat
Examples/Minimal/: CMakeLists.txt  index.html
Playground/: CMakeLists.txt  Spin.py
Playground/LD42_BulletJam/: CMakeLists.txt  pack_atlas.bat
Playground/Noise/: CMakeLists.txt
Playground/PlatformerTrial/: CMakeLists.txt
Playground/TileBasedPlatformerTrial/: CMakeLists.txt  pack_atlas.py  run.py
Playground/VoxelExperiment/: CMakeLists.txt  CompileShader.bat  Program.cpp  VoxelExperiment.cpp  VoxelExperiment.h  fs_mypbr.sc  fs_simple.sc  fs_skybox.sc  index.html  varying.def.sc  vs_simple.sc
Playground/VoxelExperiment/Scenes/: MainScene.cpp  MainScene.h  Skybox.cpp  Skybox.h
Playground/VoxelExperiment/Voxel/: Block.h  Chunk.cpp  Chunk.h  ChunkGraphicsComponent.cpp  ChunkGraphicsComponent.h  World.cpp  World.h
Playground/VoxelExperiment/shaders/: fs_mypbr.sc  fs_pbr.sc  fs_simple.sc  fs_skybox.sc  uniform.sh  varying.def.sc  vs_mypbr.sc  vs_pbr.sc  vs_simple.sc  vs_skybox.sc
Playground/VoxelExperiment/src/: Program.cpp  Program.h  VoxelExperiment.cpp  VoxelExperiment.h
Playground/VoxelExperiment/src/Entities/: Player.cpp  Player.h
Playground/VoxelExperiment/src/Graphics/: Skybox.cpp  Skybox.h
Playground/VoxelExperiment/src/Scenes/: MainScene.cpp  MainScene.h  Skybox.cpp  Skybox.h
Playground/VoxelExperiment/src/Voxel/: Block.h  Chunk.cpp  Chunk.h  ChunkGraphicsComponent.cpp  ChunkGraphicsComponent.h  World.cpp  World.h
Tests/: AllTests.cpp  CMakeLists.txt  CalcTest.cpp  CollideTest.cpp  Test.h  TestMain.cpp  UtilTest.cpp
Tools/: CMakeLists.txt  bmfont_to_json.py  build_shaderc_in_docker.sh  compile_shader.py  countdown.bat  create_project.py  create_scene.py  generate_index_html.py  setup_sdl2_for_windows.py  update_bgfx.py
Tools/ParticleEditor/: CMakeLists.txt  run.py
Tools/crunch/: CMakeLists.txt
Tools/crunch/crunch/: binary.cpp  hash.cpp  lodepng.cpp  main.cpp
Tools/lib/: __init__.py  cherrysoda.py
Tools/sfxr_port/: CMakeLists.txt  index.html
cmake/: Documentation.cmake  SysDetect.cmake
tool/: compile_shader.py  download_and_setup_sdl2_for_windows.py
tools/: CompileShader  CompileShader.bat  CompileShaderES.bat  compile_shader.py  countdown.py
(+106 files in other folders)
